--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,20 @@
             "dest": "/"
         },
         {
+            "src": "/webhook",
+            "methods": [
+                "POST"
+            ],
+            "dest": "/index.js"
+        },
+        {
+            "src": "/create-payment-intent",
+            "methods": [
+                "POST"
+            ],
+            "dest": "/index.js"
+        },
+        {
             "src": "/api/(.*)",
             "methods": [
                 "GET",
